--- a/_posts/2022-05-28-SVD.md
+++ b/_posts/2022-05-28-SVD.md
@@ -4,7 +4,7 @@ title: "SVD (Singular Vector Decomposition) with AI"
 description: SVD(Singular Vector Decomposition)
 date: "2022-04-18 11:30:00 +0900"
 last_modified_at: "2022-04-18 21:30:00 +0900"
-tags: ["Linear Algebra", "Matrix"]
+tags: ["Linear Algebra", "Matrix", "AI"]
 ---
 
 ---
